[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Dungeon.png" type="Texture" id=1]
[ext_resource path="res://Images/DungeonFireLevel.png" type="Texture" id=2]
[ext_resource path="res://DungeonScenes.gd" type="Script" id=3]
[ext_resource path="res://Images/DungeonPurpleAndWhite.png" type="Texture" id=4]

[node name="DungeonScenes" type="Node2D"]
script = ExtResource( 3 )

[node name="Tier1" type="Sprite" parent="."]
position = Vector2( 44.9284, 80.1327 )
scale = Vector2( 1.00121, 0.998241 )
texture = ExtResource( 1 )

[node name="Tier2" type="Sprite" parent="."]
visible = false
position = Vector2( 45.1195, 80.0971 )
scale = Vector2( 0.997915, 0.998943 )
texture = ExtResource( 2 )

[node name="Tier3" type="Sprite" parent="."]
visible = false
position = Vector2( 45.0052, 79.995 )
scale = Vector2( 0.999919, 1.00003 )
texture = ExtResource( 4 )
